// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails - Actions should cancelStep 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel step step-id",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "handleError": [Function],
        "handleSuccess": [Function],
        "key": "TASK_STEP_CANCEL",
        "url": "/foreman_tasks/tasks/task-id/cancel_step?step_id=step-id",
      },
      "type": "API_POST",
    },
  ],
]
`;

exports[`TaskDetails - Actions should start reload 1`] = `
Array [
  Array [
    Object {
      "interval": 5000,
      "payload": Object {
        "handleError": [Function],
        "handleSuccess": [Function],
        "key": "FOREMAN_TASK_DETAILS",
        "url": "/foreman_tasks/api/tasks/1/details?include_permissions",
      },
      "type": "API_GET",
    },
  ],
]
`;

exports[`TaskDetails - Actions should stop reload 1`] = `
Object {
  "key": "FOREMAN_TASK_DETAILS",
  "type": "STOP_INTERVAL",
}
`;
